# rps_simulator

./: Cargo.toml  README.md
src/: context.rs  lib.rs  main.rs  math.rs  renderer.rs  shader.wgsl  simulation.rs
src/renderer/: command.rs  instance.rs  mesh.rs  projection.rs  texture.rs
