[package]
name = "rps_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
env_logger = "0.9.3"
pollster = "0.2.5"
wgpu = "0.14.0"
winit = "0.27.5"
anyhow = "1.0.66"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]
